--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "firebase-tools": "^14.24.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.0"
   }
